methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:17: error: Unit does not take parameters
    faireV(); faire2V(); faireV(); faire2V(); faireV()
                     ^PictureMono2:17: error: Unit does not take parameters
    faireV(); faire2V(); faireV(); faire2V(); faireV()
                                          ^