methods.picture.PictureMono2.scala.code
override def run() {
  def faireV() {
    avance(2); baisseBrosse(); leveBrosse();
    gauche(); avance(); droite(); avance(); baisseBrosse(); leveBrosse()
    avance(); droite(); avance(); baisseBrosse(); leveBrosse();
    gauche(); avance(2); gauche()
  }
  
  
  
  def faire2V {
    faireV(); recule(); gauche(); faireV()
  }
  
  
  def faireMotif() {
    faireV(); faire2V(); faireV(); faire2V(); faireV()
  }
  
  
  for (i<- 0 to 3) {
    faireMotif()
  }
  
}